--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,15 @@ certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
 comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
 debugpy==1.8.16
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
 filelock==3.13.1
+fonttools==4.59.2
 fqdn==1.5.1
 fsspec==2024.6.1
 h11==0.16.0
@@ -41,10 +44,13 @@ jupyter_core==5.8.1
 jupyter_server==2.17.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.4.7
+jupyterlab-vim==4.1.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+kiwisolver==1.4.9
 lark==1.2.2
 MarkupSafe==2.1.5
+matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mistune==3.1.4
 mpmath==1.3.0
@@ -57,6 +63,7 @@ notebook_shim==0.2.4
 numpy==2.1.2
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.2
 pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
@@ -69,8 +76,10 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.0.2
 referencing==0.36.2
@@ -93,6 +102,7 @@ tornado==6.5.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250822
 typing_extensions==4.9.0
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
 wcwidth==0.2.13
